2009-01-05  Adam Treat  <adam.treat@torchmobile.com>

        Another blind mac build fix

        * WebCoreSupport/WebChromeClient.mm:
        (WebChromeClient::contentsSizeChanged):

2009-01-05  Adam Treat  <adam.treat@torchmobile.com>

        Blind mac build fix

        * WebCoreSupport/WebChromeClient.mm:

2009-01-05  Adam Treat  <adam.treat@torchmobile.com>

        Fix mac build

        * WebCoreSupport/WebChromeClient.h:

2009-01-05  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by George Staikos.

        Build fix for contentsSizeChanged

        * WebCoreSupport/WebChromeClient.h:
        * WebCoreSupport/WebChromeClient.mm:
        (WebChromeClient::contentsSizeChanged):

2009-01-02  Darin Adler  <darin@apple.com>

        Reviewed by Sam Weinig.

        Bug 23072: REGRESSION (r37371): In the Dictionary application, scroll bar appears
        inside its web view when resizing its window
        https://bugs.webkit.org/show_bug.cgi?id=23072
        rdar://problem/6368028

        The first attempt at fixing this did not work.
        This time I was able to reproduce the bug and test the fix.

        * WebCoreSupport/WebFrameLoaderClient.mm:
        (applyAppleDictionaryApplicationQuirkNonInlinePart): Changed the arguments and
        function names around a bit to make even less code at the call site.
        (applyAppleDictionaryApplicationQuirk): Put the check for whether this is the
        Dictionary application in here.
        (WebFrameLoaderClient::dispatchDidLoadResourceFromMemoryCache): Put a call to
        applyAppleDictionaryApplicationQuirk here. This was a case I had missed before,
        when the script is cached. This fixes one of the two problems with the initial
        patch; the other fix is in WebCore.
        (WebFrameLoaderClient::dispatchWillSendRequest): Changed the
        applyAppleDictionaryApplicationQuirk call here to work the new simpler way.
